Update components to version with agents

--- a/static/icons/demo-external-svg.html
+++ b/static/icons/demo-external-svg.html
@@ -50,7 +50,27 @@
         </div>
         <div class="glyph fs2">
             <div class="clearfix pbs">
+                <svg class="icon icon-battery"><use xlink:href="symbol-defs.svg#icon-battery"></use></svg><span class="name"> icon-battery</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-battery-charging"><use xlink:href="symbol-defs.svg#icon-battery-charging"></use></svg><span class="name"> icon-battery-charging</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
                 <svg class="icon icon-book"><use xlink:href="symbol-defs.svg#icon-book"></use></svg><span class="name"> icon-book</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-briefcase"><use xlink:href="symbol-defs.svg#icon-briefcase"></use></svg><span class="name"> icon-briefcase</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-calendar"><use xlink:href="symbol-defs.svg#icon-calendar"></use></svg><span class="name"> icon-calendar</span>
             </div>
         </div>
         <div class="glyph fs2">
@@ -115,6 +135,11 @@
         </div>
         <div class="glyph fs2">
             <div class="clearfix pbs">
+                <svg class="icon icon-clipboard"><use xlink:href="symbol-defs.svg#icon-clipboard"></use></svg><span class="name"> icon-clipboard</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
                 <svg class="icon icon-clock"><use xlink:href="symbol-defs.svg#icon-clock"></use></svg><span class="name"> icon-clock</span>
             </div>
         </div>
@@ -126,6 +151,11 @@
         <div class="glyph fs2">
             <div class="clearfix pbs">
                 <svg class="icon icon-code"><use xlink:href="symbol-defs.svg#icon-code"></use></svg><span class="name"> icon-code</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-copy"><use xlink:href="symbol-defs.svg#icon-copy"></use></svg><span class="name"> icon-copy</span>
             </div>
         </div>
         <div class="glyph fs2">
@@ -205,7 +235,37 @@
         </div>
         <div class="glyph fs2">
             <div class="clearfix pbs">
+                <svg class="icon icon-mic"><use xlink:href="symbol-defs.svg#icon-mic"></use></svg><span class="name"> icon-mic</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
                 <svg class="icon icon-paperclip"><use xlink:href="symbol-defs.svg#icon-paperclip"></use></svg><span class="name"> icon-paperclip</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-phone"><use xlink:href="symbol-defs.svg#icon-phone"></use></svg><span class="name"> icon-phone</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-phone-forwarded"><use xlink:href="symbol-defs.svg#icon-phone-forwarded"></use></svg><span class="name"> icon-phone-forwarded</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-phone-incoming"><use xlink:href="symbol-defs.svg#icon-phone-incoming"></use></svg><span class="name"> icon-phone-incoming</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-phone-missed"><use xlink:href="symbol-defs.svg#icon-phone-missed"></use></svg><span class="name"> icon-phone-missed</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-phone-outgoing"><use xlink:href="symbol-defs.svg#icon-phone-outgoing"></use></svg><span class="name"> icon-phone-outgoing</span>
             </div>
         </div>
         <div class="glyph fs2">
@@ -255,6 +315,11 @@
         </div>
         <div class="glyph fs2">
             <div class="clearfix pbs">
+                <svg class="icon icon-smartphone"><use xlink:href="symbol-defs.svg#icon-smartphone"></use></svg><span class="name"> icon-smartphone</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
                 <svg class="icon icon-square"><use xlink:href="symbol-defs.svg#icon-square"></use></svg><span class="name"> icon-square</span>
             </div>
         </div>
@@ -271,6 +336,11 @@
         <div class="glyph fs2">
             <div class="clearfix pbs">
                 <svg class="icon icon-trash"><use xlink:href="symbol-defs.svg#icon-trash"></use></svg><span class="name"> icon-trash</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-trash-2"><use xlink:href="symbol-defs.svg#icon-trash-2"></use></svg><span class="name"> icon-trash-2</span>
             </div>
         </div>
         <div class="glyph fs2">
@@ -313,163 +383,32 @@
                 <svg class="icon icon-send_to_mobile"><use xlink:href="symbol-defs.svg#icon-send_to_mobile"></use></svg><span class="name"> icon-send_to_mobile</span>
             </div>
         </div>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-campaign"><use xlink:href="symbol-defs.svg#icon-campaign"></use></svg><span class="name"> icon-campaign</span>
-            </div>
-        </div>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-contact"><use xlink:href="symbol-defs.svg#icon-contact"></use></svg><span class="name"> icon-contact</span>
-            </div>
-        </div>
-        <div class="glyph fs2">
-            <div class="clearfix pbs">
-                <svg class="icon icon-flow"><use xlink:href="symbol-defs.svg#icon-flow"></use></svg><span class="name"> icon-flow</span>
-            </div>
-        </div>
-  </div>
-    <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
-        <div class="glyph fs3">
-            <div class="clearfix pbs">
-                <svg class="icon icon-megaphone"><use xlink:href="symbol-defs.svg#icon-megaphone"></use></svg><span class="name"> icon-megaphone</span>
-            </div>
-        </div>
   </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
-        <div class="glyph fs4">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-users1"><use xlink:href="symbol-defs.svg#icon-users1"></use></svg><span class="name"> icon-users1</span>
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-lock2"><use xlink:href="symbol-defs.svg#icon-lock2"></use></svg><span class="name"> icon-lock2</span>
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-atom"><use xlink:href="symbol-defs.svg#icon-atom"></use></svg><span class="name"> icon-atom</span>
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-paperplane"><use xlink:href="symbol-defs.svg#icon-paperplane"></use></svg><span class="name"> icon-paperplane</span>
             </div>
         </div>
-        <div class="glyph fs4">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-cancel"><use xlink:href="symbol-defs.svg#icon-cancel"></use></svg><span class="name"> icon-cancel</span>
-            </div>
-        </div>
-  </div>
-    <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-rocketchat"><use xlink:href="symbol-defs.svg#icon-rocketchat"></use></svg><span class="name"> icon-rocketchat</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-ticket"><use xlink:href="symbol-defs.svg#icon-ticket"></use></svg><span class="name"> icon-ticket</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-prometheus"><use xlink:href="symbol-defs.svg#icon-prometheus"></use></svg><span class="name"> icon-prometheus</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-global"><use xlink:href="symbol-defs.svg#icon-global"></use></svg><span class="name"> icon-global</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-freshchat"><use xlink:href="symbol-defs.svg#icon-freshchat"></use></svg><span class="name"> icon-freshchat</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-bothub"><use xlink:href="symbol-defs.svg#icon-bothub"></use></svg><span class="name"> icon-bothub</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-chip"><use xlink:href="symbol-defs.svg#icon-chip"></use></svg><span class="name"> icon-chip</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-luis"><use xlink:href="symbol-defs.svg#icon-luis"></use></svg><span class="name"> icon-luis</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-wit"><use xlink:href="symbol-defs.svg#icon-wit"></use></svg><span class="name"> icon-wit</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-thinq"><use xlink:href="symbol-defs.svg#icon-thinq"></use></svg><span class="name"> icon-thinq</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-whatsapp"><use xlink:href="symbol-defs.svg#icon-whatsapp"></use></svg><span class="name"> icon-whatsapp</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-wechat"><use xlink:href="symbol-defs.svg#icon-wechat"></use></svg><span class="name"> icon-wechat</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-android"><use xlink:href="symbol-defs.svg#icon-android"></use></svg><span class="name"> icon-android</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-twilio"><use xlink:href="symbol-defs.svg#icon-twilio"></use></svg><span class="name"> icon-twilio</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-rapidpro"><use xlink:href="symbol-defs.svg#icon-rapidpro"></use></svg><span class="name"> icon-rapidpro</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-telegram"><use xlink:href="symbol-defs.svg#icon-telegram"></use></svg><span class="name"> icon-telegram</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-facebook"><use xlink:href="symbol-defs.svg#icon-facebook"></use></svg><span class="name"> icon-facebook</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-jiochat"><use xlink:href="symbol-defs.svg#icon-jiochat"></use></svg><span class="name"> icon-jiochat</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-line"><use xlink:href="symbol-defs.svg#icon-line"></use></svg><span class="name"> icon-line</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-viber"><use xlink:href="symbol-defs.svg#icon-viber"></use></svg><span class="name"> icon-viber</span>
-            </div>
-        </div>
-        <div class="glyph fs5">
-            <div class="clearfix pbs">
-                <svg class="icon icon-junebug"><use xlink:href="symbol-defs.svg#icon-junebug"></use></svg><span class="name"> icon-junebug</span>
             </div>
         </div>
   </div>
