--- a/static/fonts/temba/demo.html
+++ b/static/fonts/temba/demo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> temba <small class="fgc1">(Glyphs:&nbsp;240)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> temba <small class="fgc1">(Glyphs:&nbsp;241)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
@@ -3311,6 +3311,20 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e917" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe917;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-discord"></span>
+                <span class="mls"> icon-discord</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e91d" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe91d;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
