--- a/static/fonts/icons/demo.html
+++ b/static/fonts/icons/demo.html
@@ -15,6 +15,20 @@
         <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
+                <span class="icon-pushpin"></span>
+                <span class="mls"> icon-pushpin</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e946" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe946;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="pushpin, pin" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
                 <span class="icon-address-book"></span>
                 <span class="mls"> icon-address-book</span>
             </div>
@@ -1827,20 +1841,6 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e0a0" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe0a0;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-loop-2"></span>
-                <span class="mls"> icon-loop-2</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e0a1" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe0a1;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
