Add vonage icon, remove nexmo icons, rename in localized strings

--- a/static/fonts/icons/demo.html
+++ b/static/fonts/icons/demo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> temba <small class="fgc1">(Glyphs:&nbsp;251)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> temba <small class="fgc1">(Glyphs:&nbsp;249)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
@@ -3039,20 +3039,6 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-channel-nexmo"></span>
-                <span class="mls"> icon-channel-nexmo</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e0c5" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe0c5;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
                 <span class="icon-channel-plivo"></span>
                 <span class="mls"> icon-channel-plivo</span>
             </div>
@@ -3277,34 +3263,6 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-nexmo"></span>
-                <span class="mls"> icon-nexmo</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e0c4" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe0c4;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
-                <span class="icon-nexmo_inverted"></span>
-                <span class="mls"> icon-nexmo_inverted</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e0c6" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe0c6;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
                 <span class="icon-plivo"></span>
                 <span class="mls"> icon-plivo</span>
             </div>
@@ -3521,6 +3479,20 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e918" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe918;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-vonage"></span>
+                <span class="mls"> icon-vonage</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e910" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe910;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
